# mad_pod_racing_simulation

./: mad_pod.ipynb  mad_pod_old.py  nstrat.cpp  pyproject.toml  strat.py
.ipynb_checkpoints/: mad_pod-checkpoint.ipynb
mad_pod/: constants.py  utils.py  vector.py
mad_pod/command_line/: cmdlet.py
mad_pod/simulation/: game.py  play.py  pod_physics.py  utils.py
mad_pod/strategy_communication/: communication.py  messages.py
mad_pod/visualization/: data.py  gltk.py
